# bitwuzla

./: .codeiumignore  .gitignore  README.md  incremental_solving.md  log.yaml  meson_options.txt  shuffle_smt2.sh  test.btor2  test.smt2
contrib/: get_git_id.py
include/bitwuzla/: option.h
include/bitwuzla/c/: bitwuzla.h
include/bitwuzla/cpp/: bitwuzla.h
patches/: kissat-unsat-mode.patch
scripts/: apply_kissat_patch.sh
src/: meson.build
src/api/c/: bitwuzla.cpp
src/api/cpp/: bitwuzla.cpp
src/lib/ls/bv/: bitvector_node.cpp
src/main/: main.cpp  options.cpp  options.h
src/option/: option.cpp  option.h
src/sat/: kissat.cpp
src/solver/: multiple_cores.cpp  multiple_cores.h
src/solver/abstract/: abstraction_lemmas.cpp  abstraction_lemmas.h  abstraction_module.cpp
subprojects/kissat-rel-4.0.1/src/: internal.c  internal.h  kissat.h
