option('python', type: 'boolean', value: false)
option('testing', type: 'feature', value: 'auto')
option('unit_testing', type: 'feature', value: 'auto')
option('docs', type: 'boolean', value: false)
option('kissat', type: 'boolean', value: false)
option('kissat_unsat', type: 'boolean', value: false, description: 'Enable Kissat unsat mode (--stable=0)')
option('apply_kissat_patch', type: 'boolean', value: false, description: 'Apply Kissat unsat mode patch')
option('cryptominisat', type: 'boolean', value: false)
option('fpexp', type: 'boolean', value: false)
